feat: add theme toggle functionality with AMOLED support

--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -10,8 +10,13 @@
         <a href="course_content.html" id="courses-link">Courses</a>
     </nav>
     <nav class="nav-right">
+        <!-- Dark/Light toggle button -->
         <button id="theme-icon" onclick="toggleTheme()" class="theme-toggle" title="Switch to Light Mode">
             <img src="images/dark-mode.svg" alt="Theme Toggle" class="theme-icon-img">
+        </button>
+        <!-- AMOLED toggle button (visible only when theme is dark) -->
+        <button id="amoled-button" onclick="setAmoledTheme()" class="amoled-toggle" title="Switch to AMOLED Mode" style="display: none;">
+            AMOLED
         </button>
         <a href="#" id="login-button">Login</a>
         <a href="#" id="register-button">Register</a>
