--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -5,6 +5,8 @@
   <title>Interactive Keyboard Shortcuts Quiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <!-- Include the theme-switcher script -->
+  <script src="scripts/theme-switcher.js" defer></script>
   <style>
     .bordered-box:focus {
       border: 2px solid var(--primary-color);
@@ -106,7 +108,7 @@
   <script src="scripts/certificate-utils.js" defer></script>
 </head>
 <body>
-  <!-- Header Placeholder -->
+  <!-- Header Placeholder (loaded by loadImports.js) -->
   <div id="header-placeholder"></div>
 
   <div class="container">
@@ -173,7 +175,7 @@ Mastering keyboard shortcuts is a step towards both efficiency and effectiveness
     <div id="quiz-result"></div>
   </div>
 
-  <!-- Footer Placeholder -->
+  <!-- Footer Placeholder (loaded by loadImports.js) -->
   <div id="footer-placeholder"></div>
 
   <!-- Script to load header and footer -->
