refactor: update script paths from imports to scripts directory

--- a/website/course_content.html
+++ b/website/course_content.html
@@ -183,6 +183,6 @@
     </script>
 
     <!-- Script to load header and footer -->
-    <script src="imports/loadImports.js" defer></script>
+    <script src="scripts/loadImports.js" defer></script>
 </body>
 </html>
