--- a/website/course_placeholder.html
+++ b/website/course_placeholder.html
@@ -21,6 +21,6 @@
   <div id="footer-placeholder"></div>
 
   <!-- Load header and footer components -->
-  <script src="imports/loadImports.js"></script>
+  <script src="scripts/loadImports.js"></script>
 </body>
 </html>
