--- a/website/digital literacy shortcuts/copy_paste.html
+++ b/website/digital literacy shortcuts/copy_paste.html
@@ -119,6 +119,6 @@
             }
         });
     </script>
-    <script src="../imports/loadImports.js" defer></script>
+    <script src="../scripts/loadImports.js" defer></script>
 </body>
 </html>
