--- a/website/digital literacy shortcuts/hub.html
+++ b/website/digital literacy shortcuts/hub.html
@@ -94,6 +94,6 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../imports/loadImports.js" defer></script>
+    <script src="../scripts/loadImports.js" defer></script>
 </body>
 </html>
