--- a/website/digital literacy shortcuts/save.html
+++ b/website/digital literacy shortcuts/save.html
@@ -129,6 +129,6 @@
             document.getElementById('popup').style.display = 'none';
         }
     </script>
-    <script src="../imports/loadImports.js" defer></script>
+    <script src="../scripts/loadImports.js" defer></script>
 </body>
 </html>
