--- a/website/digital literacy shortcuts/undo_redo.html
+++ b/website/digital literacy shortcuts/undo_redo.html
@@ -69,6 +69,6 @@
         practiceArea.focus();
         // Undo and Redo are handled by the browser; no JS required
     </script>
-    <script src="../imports/loadImports.js" defer></script>
+    <script src="../scripts/loadImports.js" defer></script>
 </body>
 </html>
