--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Script to load header and footer -->
-    <script src="imports/loadImports.js"></script>
+    <script src="scripts/loadImports.js"></script>
 </body>
 </html>
