--- a/website/digital literacy shortcuts/find.html
+++ b/website/digital literacy shortcuts/find.html
@@ -79,6 +79,6 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../imports/loadImports.js"></script>
+    <script src="../scripts/loadImports.js"></script>
 </body>
 </html>
