--- a/website/digital literacy shortcuts/select_all.html
+++ b/website/digital literacy shortcuts/select_all.html
@@ -75,6 +75,6 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="../imports/loadImports.js"></script>
+    <script src="../scripts/loadImports.js"></script>
 </body>
 </html>
