--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -179,7 +179,7 @@ Mastering keyboard shortcuts is a step towards both efficiency and effectiveness
   <div id="footer-placeholder"></div>
 
   <!-- Script to load header and footer -->
-  <script src="imports/loadImports.js"></script>
+  <script src="scripts/loadImports.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
