Clicking on courses works

--- a/website/digital literacy shortcuts/find.html
+++ b/website/digital literacy shortcuts/find.html
@@ -6,9 +6,8 @@
     <title>Digital Literacy Course: Mastering the Find Function</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-
 </head>
-<body>
+<body onload="markCourseAsCompleted('course-find')">
 
     <header>
         <!-- Logo Placeholder -->
@@ -57,7 +56,6 @@
                     </ul>
                 </div>
             </div>
-
         </section>
 
         <section id="practice-section" class="practice-section">
@@ -79,6 +77,7 @@
 
     <div id="footer-placeholder"></div>
 
+    <script src="../scripts/course_progress_shortcuts.js"></script>
     <script src="../imports/loadImports.js"></script>
 </body>
 </html>
