--- a/website/digital literacy shortcuts/save.html
+++ b/website/digital literacy shortcuts/save.html
@@ -49,7 +49,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="markCourseAsCompleted('course-save')">
 
     <div id="header-placeholder"></div>
 
@@ -105,7 +105,7 @@
 
         <div class="navigation">
             <a href="hub.html">&#8592; Back to Hub</a>
-            <a href="select_all.html">Selecting All Content &#8594;</a>
+            <a href="select_all.html">Selecting All &#8594;</a>
         </div>
     </div>
 
@@ -129,6 +129,7 @@
             document.getElementById('popup').style.display = 'none';
         }
     </script>
+    <script src="../scripts/course_progress_shortcuts.js"></script>
     <script src="../imports/loadImports.js" defer></script>
 </body>
 </html>
