refactor: consolidate stylesheet links into index.html and update footer/header comments

--- a/website/imports/footer.html
+++ b/website/imports/footer.html
@@ -1,4 +1,4 @@
-<!-- Footer Component -->
+<!-- file: imports/footer.html -->
 <footer>
     <a href="TOS.html">Terms of Service</a>
     <span>|</span>
@@ -7,4 +7,5 @@
     <a href="#" id="login-footer">Login</a>
     <span>|</span>
     <a href="#" id="register-footer">Register</a>
-</footer>
+  </footer>
+  
