--- a/website/index.html
+++ b/website/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Literacy Course - Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digital Literacy Course - Home</title>
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- Header-specific stylesheet (moved from header.html) -->
+  <link rel="stylesheet" href="styles/header.css">
 </head>
 <body>
-    <!-- Include the header -->
-    <div id="header-placeholder"></div>
+  <!-- Placeholder for the header component -->
+  <div id="header-placeholder"></div>
 
-    <div class="main">
-        <h1>Welcome to Digital Literacy Courses</h1>
-        <p>Enhance your digital skills with our comprehensive courses. Start learning today!</p>
+  <!-- Main content of the page -->
+  <div class="main">
+    <h1>Welcome to Digital Literacy Courses</h1>
+    <p>Enhance your digital skills with our comprehensive courses. Start learning today!</p>
 
-        <div class="courses">
-            <!-- Course 1: Keybinds Lesson -->
-            <div class="course-card">
-                <h2>Keybinds Lesson</h2>
-                <p>Learn essential keyboard shortcuts to boost your productivity and efficiency in various applications.</p>
-                <a href="digital literacy shortcuts/hub.html" class="button">Start Course</a>
-            </div>
+    <div class="courses">
+      <!-- Course 1: Keybinds Lesson -->
+      <div class="course-card">
+        <h2>Keybinds Lesson</h2>
+        <p>Learn essential keyboard shortcuts to boost your productivity and efficiency in various applications.</p>
+        <a href="digital literacy shortcuts/hub.html" class="button">Start Course</a>
+      </div>
 
-            <!-- Course 2: Placeholder Course -->
-            <div class="course-card">
-                <h2>Coming Soon: Basic Internet Safety</h2>
-                <p>Stay tuned! We are developing a course to help you navigate the internet safely and securely.</p>
-                <a href="course_placeholder.html" class="button">Learn More</a>
-            </div>
-        </div>
+      <!-- Course 2: Placeholder Course -->
+      <div class="course-card">
+        <h2>Coming Soon: Basic Internet Safety</h2>
+        <p>Stay tuned! We are developing a course to help you navigate the internet safely and securely.</p>
+        <a href="course_placeholder.html" class="button">Learn More</a>
+      </div>
     </div>
+  </div>
 
-    <!-- Include the footer -->
-    <div id="footer-placeholder"></div>
+  <!-- Placeholder for the footer component -->
+  <div id="footer-placeholder"></div>
 
-    <!-- Script to load header and footer -->
-    <script src="scripts/loadImports.js"></script>
+  <!-- Script to load header and footer components dynamically -->
+  <script src="scripts/loadImports.js"></script>
 </body>
 </html>
