refactor: improve structure and readability of copy_paste.html

--- a/website/digital literacy shortcuts/copy_paste.html
+++ b/website/digital literacy shortcuts/copy_paste.html
@@ -75,7 +75,7 @@
     <div id="footer-placeholder"></div>
 
     <script src="../scripts/course_progress_shortcuts.js"></script>
-    <script src="../imports/loadImports.js" defer></script>
+    <script src="../scripts/loadImports.js" defer></script>
     <script>
         window.addEventListener('beforeunload', function() {
             markCourseAsCompleted('course-copy-paste');
