fix header in hub

--- a/website/digital literacy shortcuts/hub.html
+++ b/website/digital literacy shortcuts/hub.html
@@ -6,47 +6,7 @@
   <title>Digital Literacy Course Hub</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/styles.css">
-  <style>
-    /* Quiz section and course styles */
-    .quiz-section {
-      margin-top: 40px;
-      padding: 20px;
-      background-color: var(--light-background);
-      border: 2px solid var(--primary-color);
-      border-radius: 10px;
-      text-align: center;
-    }
-    .quiz-section h2 {
-      font-size: 2rem;
-      color: var(--primary-color);
-    }
-    .quiz-section p {
-      font-size: 1.2rem;
-      color: var(--text-color);
-    }
-    .quiz-section .quiz-button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1.2rem;
-      color: var(--text-color);
-      background-color: var(--primary-color);
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    .quiz-section .quiz-button:hover {
-      background-color: var(--secondary-color);
-    }
-    .completed {
-      border-color: #28a745 !important;
-    }
-    .completed .button {
-      background-color: #28a745 !important;
-      border-color: #28a745 !important;
-    }
-  </style>
+  <link rel="stylesheet" href="../styles/header.css">
   <!-- Override the website root so loadImports.js knows where to find the imports -->
   <script>
     window.overrideWebsiteRoot = "../";
