--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -5,8 +5,12 @@
   <title>Interactive Keyboard Shortcuts Quiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/header.css">
   <!-- Include the theme-switcher script -->
   <script src="scripts/theme-switcher.js" defer></script>
+  <script src="scripts/quiz-text.js" defer></script>
+  <script src="scripts/quiz-certificate.js" defer></script>
+  <script src="scripts/certificate-utils.js" defer></script>
   <style>
     .bordered-box:focus {
       border: 2px solid var(--primary-color);
@@ -104,8 +108,6 @@
       animation: fadeIn 1s ease-out;
     }
   </style>
-  <script src="scripts/quiz-certificate.js" defer></script>
-  <script src="scripts/certificate-utils.js" defer></script>
 </head>
 <body>
   <!-- Header Placeholder (loaded by loadImports.js) -->
@@ -151,9 +153,7 @@ Mastering keyboard shortcuts is a step towards both efficiency and effectiveness
           3. Edit the paragraph below: delete the text, then use the undo shortcut to restore it, and finally use the redo shortcut to remove it again.
         </p>
         <div style="margin-left: 20px;">
-          <p contenteditable="true" id="q3-paragraph" class="bordered-box" style="outline: none;">
-            <!-- AI-generated text will be typed out here -->
-          </p>
+          <p contenteditable="true" id="q3-paragraph" class="bordered-box"></p>
         </div>
       </div>
 
@@ -199,13 +199,13 @@ Mastering keyboard shortcuts is a step towards both efficiency and effectiveness
 
       // Global quiz answer tracking (exposed globally)
       window.quizAnswers = {
-      q1SelectAll: false,
-      q1CopiedText: '',
+        q1SelectAll: false,
+        q1CopiedText: '',
         // Q2 will be validated during submission
-      q3Undo: false,
-      q3Redo: false,
-      q4: false
-    };
+        q3Undo: false,
+        q3Redo: false,
+        q4: false
+      };
 
       // Q1: Randomize source text and prompt
       const q1Texts = [
@@ -223,7 +223,7 @@ Using shortcuts helps you work smarter, not harder.`
       ];
       const q1Title = document.querySelectorAll('.question-title')[0];
       q1Title.innerHTML = q1QuestionVariants[Math.floor(Math.random() * q1QuestionVariants.length)];
-    const q1Source = document.getElementById('q1-source');
+      const q1Source = document.getElementById('q1-source');
       q1Source.value = q1Texts[Math.floor(Math.random() * q1Texts.length)];
 
       // Q2: Randomize target word, text, and expected count
@@ -277,62 +277,62 @@ Using shortcuts helps you work smarter, not harder.`
 
       // --- Event Listeners ---
       // Q1: Monitor Ctrl+A on source textarea
-    q1Source.addEventListener('keydown', function(e) {
+      q1Source.addEventListener('keydown', function(e) {
         if (e.ctrlKey && (e.key === 'a' || e.key === 'A')) {
-        quizAnswers.q1SelectAll = true;
-      }
-    });
+          quizAnswers.q1SelectAll = true;
+        }
+      });
       // Q1: Monitor paste on destination textarea
       const q1Destination = document.getElementById('q1-destination');
-    q1Destination.addEventListener('paste', function() {
-      setTimeout(() => {
-        quizAnswers.q1CopiedText = this.value;
-      }, 100);
-    });
+      q1Destination.addEventListener('paste', function() {
+        setTimeout(() => {
+          quizAnswers.q1CopiedText = this.value;
+        }, 100);
+      });
 
       // Q3: Record changes in contenteditable paragraph
-    q3Paragraph.addEventListener('input', function() {
-      q3History.push(q3Paragraph.innerHTML);
-    });
+      q3Paragraph.addEventListener('input', function() {
+        q3History.push(q3Paragraph.innerHTML);
+      });
       // Q3: Undo (Ctrl+Z) and Redo (Ctrl+Y) handling
-    document.addEventListener('keydown', function(e) {
+      document.addEventListener('keydown', function(e) {
         if (e.ctrlKey && (e.key === 'z' || e.key === 'Z')) {
-        e.preventDefault();
+          e.preventDefault();
           if (q3History.length > 1) {
             q3History.pop();
             q3Paragraph.innerHTML = q3History[q3History.length - 1];
-          quizAnswers.q3Undo = true;
-        }
+            quizAnswers.q3Undo = true;
+          }
         } else if (e.ctrlKey && (e.key === 'y' || e.key === 'Y')) {
-        e.preventDefault();
+          e.preventDefault();
           // For simplicity, redo clears the paragraph
           q3Paragraph.innerHTML = '';
           quizAnswers.q3Redo = true;
-      }
-    });
+        }
+      });
 
       // Q4: Monitor Save Shortcut (Ctrl+S)
-    document.addEventListener('keydown', function(e) {
+      document.addEventListener('keydown', function(e) {
         if (e.ctrlKey && (e.key === 's' || e.key === 'S')) {
-        e.preventDefault();
-        quizAnswers.q4 = true;
-        alert('Document saved successfully!');
-      }
-    });
+          e.preventDefault();
+          quizAnswers.q4 = true;
+          alert('Document saved successfully!');
+        }
+      });
 
       // --- Submit Quiz Function ---
       window.submitQuiz = function() {
-      let score = 0;
-      let explanations = '';
+        let score = 0;
+        let explanations = '';
 
         // Q1 Check
-      let originalText = q1Source.value.trim();
-      if (quizAnswers.q1SelectAll && quizAnswers.q1CopiedText.trim() === originalText) {
+        let originalText = q1Source.value.trim();
+        if (quizAnswers.q1SelectAll && quizAnswers.q1CopiedText.trim() === originalText) {
           score++;
           explanations += '<p><strong>Question 1:</strong> Correct! You used Ctrl+A, Ctrl+C, and Ctrl+V properly.</p>';
-      } else if (quizAnswers.q1CopiedText.trim() === originalText) {
-          explanations += '<p><strong>Question 1:</strong> Partially correct. You copied and pasted the text, but didn’t use Ctrl+A.</p>';
-      } else {
+        } else if (quizAnswers.q1CopiedText.trim() === originalText) {
+          explanations += '<p><strong>Question 1:</strong> Partially correct. You copied and pasted the text, but didn\'t use Ctrl+A.</p>';
+        } else {
           explanations += '<p><strong>Question 1:</strong> Incorrect. Please use Ctrl+A to select all, then copy and paste.</p>';
         }
 
@@ -346,39 +346,39 @@ Using shortcuts helps you work smarter, not harder.`
         if (userAnswer === actualCount) {
           score++;
           explanations += `<p><strong>Question 2:</strong> Correct! The word "${targetWord}" appears ${actualCount} times in the passage.</p>`;
-      } else {
+        } else {
           explanations += `<p><strong>Question 2:</strong> Incorrect. The word "${targetWord}" appears ${actualCount} times in the passage.</p>`;
-      }
+        }
 
         // Q3 Check
-      if (quizAnswers.q3Undo && quizAnswers.q3Redo) {
+        if (quizAnswers.q3Undo && quizAnswers.q3Redo) {
           score++;
           explanations += '<p><strong>Question 3:</strong> Correct! You performed undo and redo as required.</p>';
-      } else {
+        } else {
           explanations += '<p><strong>Question 3:</strong> Incorrect. Please perform the undo (Ctrl+Z) and redo (Ctrl+Y) actions correctly.</p>';
-      }
+        }
 
         // Q4 Check
-      if (quizAnswers.q4) {
+        if (quizAnswers.q4) {
           score++;
-        explanations += '<p><strong>Question 4:</strong> Correct! You used Ctrl+S to save the document.</p>';
-      } else {
+          explanations += '<p><strong>Question 4:</strong> Correct! You used Ctrl+S to save the document.</p>';
+        } else {
           explanations += '<p><strong>Question 4:</strong> Incorrect. Please press Ctrl+S to save your document.</p>';
-      }
+        }
 
         // Display results
         const resultElement = document.getElementById('quiz-result');
-      resultElement.style.display = 'block';
-      resultElement.innerHTML = 'You scored ' + score + ' out of 4!';
-      resultElement.innerHTML += '<div class="explanation">' + explanations + '</div>';
+        resultElement.style.display = 'block';
+        resultElement.innerHTML = 'You scored ' + score + ' out of 4!';
+        resultElement.innerHTML += '<div class="explanation">' + explanations + '</div>';
 
         // Add certificate button if perfect score
-      if (score === 4) {
-        addCertificateButton(resultElement);
-      }
+        if (score === 4) {
+          addCertificateButton(resultElement);
+        }
 
         // Reset quiz form and tracking variables
-      document.getElementById('quiz-form').reset();
+        document.getElementById('quiz-form').reset();
         quizAnswers = { q1SelectAll: false, q1CopiedText: '', q3Undo: false, q3Redo: false, q4: false };
         q3Paragraph.innerHTML = q3OriginalContent;
       };
